--- a/_includes/home.html
+++ b/_includes/home.html
@@ -3,7 +3,7 @@
   <article>
     {% include meta.html post=post preview=true %}
     {% if post.excerpt_img_url %}  <!--check if an image has been assigned to show, otherwise display regular excerpt-->
-      <img src="{{ post.excerpt_img_url }}" alt="Excerpt Image" width="500" height="500">
+      <img src="{{ post.excerpt_img_url }}" alt="Excerpt Image" width="500px" height="500px">
     {% else %}      
       {{ post.excerpt }}
     {% endif %}
